--- a/app.json
+++ b/app.json
@@ -40,10 +40,13 @@
       "url": "https://github.com/heroku/heroku-buildpack-space-proxy.git"
     },
     {
-      "url": "heroku/scala"
+      "url": "https://github.com/heroku/heroku-buildpack-jvm-common.git"
     },
     {
       "url": "https://github.com/heroku/predictionio-buildpack.git"
+    },
+    {
+      "url": "https://github.com/kr/heroku-buildpack-inline.git"
     },
     {
       "url": "https://github.com/codeship/heroku-buildpack-runit.git"
